--- a/Triangularity/wwwroot/css/site.css
+++ b/Triangularity/wwwroot/css/site.css
@@ -180,4 +180,9 @@ app {
         /* Never collapse the sidebar for wide screens */
         display: block;
     }
+
+    .responsive {
+        width: auto;
+        height: 100%;
+    }
 }
