--- a/Triangularity/Pages/Calculate.razor
+++ b/Triangularity/Pages/Calculate.razor
@@ -11,7 +11,7 @@
     <InputNumber id="column" @bind-Value="viewTriangle.column" />
     <button class="btn-primary" type="submit">Triangulate!</button>
 </EditForm>
-<br/> <br/>
+<br/> <img src="/images/sillyCoordinates.png" /> <br/>
 <ul>
         @foreach(var item in calculatedTriangles)
         {
