--- a/Triangularity/Pages/Locate.razor
+++ b/Triangularity/Pages/Locate.razor
@@ -1,4 +1,7 @@
 ﻿@page "/locate"
+@using System.ComponentModel.DataAnnotations;
+@using Triangularity.Models;
+@inject Services.ApiService apiService
 
 <h1>Locate Triangle By Vertices</h1>
 <p>Given the vertex coordinates, calculate the row and column for the Triangle</p>
@@ -38,62 +41,56 @@
 </ul>
 
 @code{     
-    public Triangularity.Models.Image Image { get; set; }
+    public Image Image { get; set; }
     private ViewTriangle inputShape = new ViewTriangle();
     private List<ViewTriangle> searchedElements = new List<ViewTriangle>();
 
     protected override void OnInitialized()
     {
-        Image = new Triangularity.Models.Image();
+        Image = new Image();
     }
 
-    private void AddTriangle()
+    private async void AddTriangle()
     {
-        try
-        {
-            inputShape.Location = Image.GetLocationByVertices(inputShape.v1x, inputShape.v1y, inputShape.v2x, inputShape.v2y, inputShape.v3x, inputShape.v3y);
-            inputShape.Triangle = new Models.Triangle(inputShape.v1x, inputShape.v1y, inputShape.v2x, inputShape.v2y, inputShape.v3x, inputShape.v3y);
-            searchedElements.Add(new ViewTriangle(inputShape.Triangle, inputShape.Location));
-        }
-        catch
-        {
-            //Do something brilliant
-        }
+        inputShape.Location = await apiService.GetLocationByVertices(inputShape.v1x, inputShape.v1y, inputShape.v2x, inputShape.v2y, inputShape.v3x, inputShape.v3y);
+        inputShape.Triangle = new Models.Triangle(inputShape.v1x, inputShape.v1y, inputShape.v2x, inputShape.v2y, inputShape.v3x, inputShape.v3y);
+        searchedElements.Add(new ViewTriangle(inputShape.Triangle, inputShape.Location));
+        StateHasChanged();
     }
 
     public class ViewTriangle
     {
-        public Triangularity.Models.Triangle Triangle { get; set; }
+        public Triangle Triangle { get; set; }
 
-        [System.ComponentModel.DataAnnotations.Required]
-        [System.ComponentModel.DataAnnotations.Range(1, 60, ErrorMessage = "Coordinate invalid for image size.")]
+        [Required]
+        [Range(1, 60, ErrorMessage = "Coordinate invalid for image size.")]
         public int v1x { get; set; } = 50;
 
-        [System.ComponentModel.DataAnnotations.Required]
-        [System.ComponentModel.DataAnnotations.Range(1, 60, ErrorMessage = "Coordinate invalid for image size.")]
+        [Required]
+        [Range(1, 60, ErrorMessage = "Coordinate invalid for image size.")]
         public int v1y { get; set; } = 20;
 
-        [System.ComponentModel.DataAnnotations.Required]
-        [System.ComponentModel.DataAnnotations.Range(1, 60, ErrorMessage = "Coordinate invalid for image size.")]
+        [Required]
+        [Range(1, 60, ErrorMessage = "Coordinate invalid for image size.")]
         public int v2x { get; set; } = 40;
 
-        [System.ComponentModel.DataAnnotations.Required]
-        [System.ComponentModel.DataAnnotations.Range(1, 60, ErrorMessage = "Coordinate invalid for image size.")]
+        [Required]
+        [Range(1, 60, ErrorMessage = "Coordinate invalid for image size.")]
         public int v2y { get; set; } = 20;
 
-        [System.ComponentModel.DataAnnotations.Required]
-        [System.ComponentModel.DataAnnotations.Range(1, 60, ErrorMessage = "Coordinate invalid for image size.")]
+        [Required]
+        [Range(1, 60, ErrorMessage = "Coordinate invalid for image size.")]
         public int v3x { get; set; } = 50;
 
-        [System.ComponentModel.DataAnnotations.Required]
-        [System.ComponentModel.DataAnnotations.Range(1, 60, ErrorMessage = "Coordinate invalid for image size.")]
+        [Required]
+        [Range(1, 60, ErrorMessage = "Coordinate invalid for image size.")]
         public int v3y { get; set; } = 30;
 
         public string Location { get; set; }
 
         public ViewTriangle() { }
 
-        public ViewTriangle(Triangularity.Models.Triangle inTriangle, string inLocation)
+        public ViewTriangle(Triangle inTriangle, string inLocation)
         {
             Triangle = inTriangle;
             Location = inLocation;
